# tab5-vgbanext

./: .gitignore  BACKUP_REPORT.md  DYNAREC_PLAN.md  OPTIMIZATION.md  OPTIMIZATION_SUMMARY_FOR_REVIEW.md  README.md  partitions_ota.csv
apps/vgba_tab5/: CMakeLists.txt  build_log.txt  build_log2.txt  build_log3.txt  build_log4.txt  flash_alu.txt  flash_clean.txt  flash_dc.txt  flash_diag.txt  flash_done.txt  flash_e2.txt  flash_final.txt  flash_final2.txt  flash_fix.txt  flash_fix2.txt  flash_fs.txt  flash_fs2.txt  flash_ic.txt  flash_log.txt  flash_log2.txt  flash_log3.txt  flash_log4.txt  flash_ls.txt  flash_m0.txt  flash_m1.txt  flash_m2a.txt  flash_m2b.txt  flash_m3.txt  flash_m3b.txt  flash_m3c.txt  flash_m4.txt  flash_m4b.txt  flash_m4c.txt  flash_m4d.txt  flash_m5a.txt  flash_menu.txt  flash_o2.txt  flash_rev.txt  flash_rom.txt  flash_sc.txt  (+5 more)
apps/vgba_tab5/main/: CMakeLists.txt  main.c
components/app_common/: CMakeLists.txt  app_common.c
components/app_common/include/: app_common.h
components/audio/: CMakeLists.txt  audio.c
components/audio/include/: audio.h
components/bsp/: CMakeLists.txt  bsp_tab5.c  idf_component.yml  m5stack_tab5.c
components/bsp/include/bsp/: config.h  m5stack_tab5.h
components/espressif__esp_lcd_touch_st7123/: .component_hash  CHECKSUMS.json  CMakeLists.txt
components/file_browser/: CMakeLists.txt  cjk_font16.c  cjk_font16.h  file_browser.c
components/file_browser/include/: file_browser.h
components/gamepad/: CMakeLists.txt  gamepad.c
components/gamepad/include/: gamepad.h
components/odroid/: CMakeLists.txt  Kconfig.projbuild  gt911_touch.h  hdmi_display.h  odroid_audio.c  odroid_display.c  odroid_input.c  odroid_sdcard.c  odroid_settings.c  odroid_system.c  odroid_vpad.c  pins_config.h  st7701_lcd.h  vpad_font8.c  vpad_font8.h
components/odroid/include/: odroid_audio.h  odroid_display.h  odroid_input.h  odroid_sdcard.h  odroid_settings.h  odroid_system.h  odroid_vpad.h  pins_config.h
components/ppa_engine/: CMakeLists.txt  ppa_engine.c  ppa_engine.h
components/vbanext/: CMakeLists.txt
components/vgba_jit/: CMakeLists.txt  vgba_jit.c  vgba_jit.h
components/vgba_run/: CMakeLists.txt  vgba_run.c  vgba_run.h
vba-next/: .gitignore  .travis.yml  LICENSE  Makefile.libretro
vba-next/libretro/: libretro.c  libretro_core_options.h
vba-next/libretro-common/: memalign.c
vba-next/libretro/gbaconv/: gbaconv.c
vba-next/src/: GBACheats.h  gba.c  gba.h  globals.h  memory.c  memory.h  port.h  sound.c  sound.h  thread.c  thread.h  types.h
